feat(sw): add service worker for caching

--- a/burn-temps/manifest.json
+++ b/burn-temps/manifest.json
@@ -4,7 +4,7 @@
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
-  "description": "Track burn temps for the overn",
+  "description": "Track burn temps for the oven",
   "icons": [
     {
       "src": "images/icons/icon-36x36.png",
