chore: remove unused icons & update manifest
- Remove flame-72x72.png and flame-152x152.png icons
- Update index.html to remove references to deleted icons
- Add new properties and categories to manifest.json
- Update generate-icons.sh to exclude removed icon sizes

--- a/burn-temps/manifest.json
+++ b/burn-temps/manifest.json
@@ -6,6 +6,22 @@
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "description": "Track burn temps for the oven",
+  "id": "punsvik.apps.burn-temps",
+  "dir": "ltr",
+  "scope": "apps.punsvik.net/burn-temps",
+  "lang": "en",
+  "orientation": "portrait-primary",
+  "shortcuts": [
+    {
+      "name": "Graph",
+      "url": "https://apps.punsvik.net/burn-temps/graph.html",
+      "description": "View temp graph"
+    }
+  ],
+  "categories": [
+    "productivity",
+    "utilities"
+  ],
   "icons": [
     {
       "src": "flame-gradient-48x48.png",
