--- a/burn-temps/manifest.json
+++ b/burn-temps/manifest.json
@@ -1,20 +1,20 @@
 {
   "name": "Burn Temps",
   "short_name": "BurnTemps",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "description": "Track burn temps for the oven",
   "id": "punsvik.apps.burn-temps",
   "dir": "ltr",
-  "scope": "apps.punsvik.net/burn-temps",
+  "scope": "/",
   "lang": "en",
   "orientation": "portrait-primary",
   "shortcuts": [
     {
       "name": "Graph",
-      "url": "https://apps.punsvik.net/burn-temps/graph.html",
+      "url": "/burn-temps/graph.html",
       "description": "View temp graph"
     }
   ],
@@ -24,52 +24,14 @@
   ],
   "icons": [
     {
-      "src": "flame-gradient-48x48.png",
-      "sizes": "48x48",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "flame-gradient-72x72.png",
-      "sizes": "72x72",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "flame-gradient-96x96.png",
-      "sizes": "96x96",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "flame-gradient-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "flame-gradient-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "flame-gradient-192x192.png",
+      "src": "images/icons/flame-gradient-192x192.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     },
     {
-      "src": "flame-gradient-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png",
-      "purpose": "maskable any"
-    },
-    {
-      "src": "flame-gradient-512x512.png",
+      "src": "images/icons/flame-gradient-512x512.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable any"
+      "type": "image/png"
     }
   ]
 }
